crates/nash-parse/src/expression/snapshots/nash_parse__expression__variable__tests__error_reserved_do.snap
---
source: crates/nash-parse/src/expression/variable.rs
description: "Code:\n\ndo"
---
Start(
    1,
    1,
)
