crates/nash-parse/src/expression/snapshots/nash_parse__expression__variable__tests__error_reserved_if.snap
---
source: crates/nash-parse/src/expression/variable.rs
description: "Code:\n\nif"
info: diagnostic
---
nash::syntax

  × Expected an expression in the `value` definition.
   ╭─[src/Main.nash:1:1]
 1 │ if
   · ─
   ╰────
  help: Add an expression or `todo` for an unfinished body.
