crates/nash-parse/src/expression/snapshots/nash_parse__expression__variable__tests__error_reserved_trait.snap
---
source: crates/nash-parse/src/expression/variable.rs
description: "Code:\n\ntrait"
---
Start(
    1,
    1,
)
