crates/nash-parse/src/expression/snapshots/nash_parse__expression__variable__tests__multi_qualified_upper.snap
---
source: crates/nash-parse/src/expression/variable.rs
description: "Code:\n\nA.B.C.Foo"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 10,
        },
    },
    value: VarQual {
        kind: CapVar,
        module: "A.B.C",
        name: "Foo",
    },
}
