crates/nash-parse/src/expression/snapshots/nash_parse__expression__variable__tests__port_is_not_reserved.snap
---
source: crates/nash-parse/src/expression/variable.rs
description: "Code:\n\nport"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 5,
        },
    },
    value: Var {
        kind: LowVar,
        name: "port",
    },
}
