crates/nash-parse/src/expression/snapshots/nash_parse__expression__variable__tests__qualified_keyword.snap
---
source: crates/nash-parse/src/expression/variable.rs
description: "Code:\n\nBuiltin.trace"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 14,
        },
    },
    value: VarQual {
        kind: LowVar,
        module: "Builtin",
        name: "trace",
    },
}
